# On-the-screen-NSFW-detector---blocker

./: main.py  pyproject.toml  shell.nix
