[tool.poetry]
name = "screen-blocker-nsfw"
version = "0.1.0"
description = "NSFW Blocking Project"
authors = ["mohamed <mohamedwalid.muslim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyscreenshot = "^3.1"
schedule = "^1.2.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
